# agent-governance-gate

./: .gitignore  CHANGELOG.md  ENHANCEMENTS.md  README.md  README_zh.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  audit_trace.md  failure_modes.md  integration.md  overview.md  policy_language.md
examples/case_law/: CASE_SUMMARY.md  README.md
examples/case_law/cases/001_unverifiable_facts/: expected.json  input.json
examples/case_law/cases/002_outdated_knowledge/: expected.json  input.json
examples/case_law/cases/003_conflicting_retrieval/: expected.json  input.json
examples/case_law/tests/: __init__.py  test_case_law.py
examples/customer_support_triage/: README.md
examples/langgraph_integration/: README.md  adapter.py  langgraph_agent.py  pyproject.toml  verify_without_langgraph.py
examples/langgraph_integration/tests/: __init__.py  test_integration.py
policies/presets/: customer_support.yaml
policies/schemas/: context.schema.json  decision.schema.json  evidence.schema.json  intent.schema.json
src/governance_gate/: __init__.py
src/governance_gate/api/: __init__.py  config.py  main.py  models.py
src/governance_gate/audit/: __init__.py  exporters.py  tracer.py
src/governance_gate/cli/: __init__.py  fixtures.py  main.py
src/governance_gate/core/: __init__.py  decision.py  errors.py  pipeline.py  types.py
src/governance_gate/evidence/: __init__.py  collectors.py  normalizers.py
src/governance_gate/gates/: __init__.py  fact_verifiability.py  responsibility.py  safety.py  uncertainty.py
src/governance_gate/policy/: __init__.py  evaluator.py  loader.py  schema_validation.py
starter-kits/: README.md
starter-kits/customer_support/: README.md  integration_example.py  policy.yaml
starter-kits/customer_support/anti_patterns/: README.md  blind_trust_confidence.yaml  disabled_safety_gate.yaml  missing_responsibility_gate.yaml  no_uncertainty_handling.yaml  overly_permissive_policy.yaml
starter-kits/customer_support/cases/: 001_refund_request.json  002_policy_change.json  003_order_status.json  004_legal_threat.json  005_compensation.json  006_account_closure.json  007_product_info.json  008_outdated_policy.json  009_fraud_attempt.json  010_low_confidence.json
starter-kits/customer_support/metrics/: definitions.md
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_api.py
tests/integration/: test_pipeline.py
tests/unit/: test_gates.py
(+24 files in other folders)
