[project]
name = "langgraph-governance-example"
version = "0.1.0"
description = "LangGraph integration example for agent-governance-gate"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
